--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         height: 25rem;
         padding-top: 15rem;
         background-color: rgba(0, 0, 0, 0.5);
-        background-image: url(//skimit.cn/images/banner.jpg);
+        background-image: url(https://skimit.cn/images/banner.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-blend-mode: darken;
